--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
     "@next/font": "^13.1.2",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "swr": "^2.0.0"
   },
   "devDependencies": {
@@ -36,6 +40,8 @@
     "@testing-library/react": "^13.4.0",
     "@types/babel__core": "^7.1.20",
     "@types/babel__generator": "^7.6.4",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/linkify-it": "^3.0.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
