--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest --coverage",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@babel/core": "7.0.0",
@@ -47,6 +48,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "babel-loader": "^8.3.0",
+    "cypress": "^12.7.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-plugin-storybook": "^0.6.10",
