--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "eslint-plugin-storybook": "^0.6.10",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "typescript": "4.9.4"
+    "msw": "^1.1.0",
+    "typescript": "4.9.4",
+    "whatwg-fetch": "^3.6.2"
   }
 }
