--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.3",
+    "@mui/material": "^5.11.11",
+    "@mui/styled-engine-sc": "^5.11.11",
     "@next/font": "^13.1.2",
     "@reduxjs/toolkit": "^1.9.3",
     "dotenv": "^16.0.3",
@@ -31,7 +32,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.15",
