--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "@types/suncalc": "^1.9.0",
     "babel-loader": "^9.1.2",
     "cypress": "^12.7.0",
-    "eslint": "8.35.0",
+    "eslint": "^8.35.0",
     "eslint-config-next": "13.2.3",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-storybook": "^0.6.11",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
