--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "tests/components/navbar.test.jsx"  ],
   "exclude": [
     "node_modules",
+    "**/*.test.ts",
+    "**/*.test.tsx",
   ]
 }
