--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/styled-engine-sc": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
     "@vercel/analytics": "^0.1.11",
+    "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
