--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "tests/components/navbar.test.jsx"  ],
+    ".next/types/**/*.ts"],
   "exclude": [
     "node_modules",
     "**/*.test.ts",
