added daily temperature graph

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@vercel/analytics": "^0.1.11",
     "chart.js": "^4.2.1",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
