--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "types": ["cypress", "node", "./support"]
+    "types": ["cypress", "node"]
   },
   "include": ["**/*.ts"],
   "exclude": []
