--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.2",
     "react-firebase-hooks": "^5.1.1",
     "react-intl": "^6.3.2",
     "react-redux": "^8.0.5",
