--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "ci": "jest && next build",
+    "ci": "env NODE_ENV=test jest && next build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
