--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --coverage",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "cypress": "cypress open",
     "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
     "component": "cypress open --component",
-    "component:headless": "cypress run --component"
+    "component:headless": "cypress run --component",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@babel/core": "^7.21.3",
@@ -74,6 +74,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "msw": "^1.2.1",
+    "storybook": "^6.5.16",
     "typescript": "5.0.2",
     "whatwg-fetch": "^3.6.2"
   }
