--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
     "next": "^13.2.4",
+    "node-cache": "^5.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
