--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "ci": "env NODE_ENV=test jest && next build",
+    "ci": "next build",
+    "cibak": "env NODE_ENV=test jest && next build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -32,7 +33,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
-    "next": "^13.2.4",
+    "next": "^13.4.16",
     "node-cache": "^5.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -71,8 +72,8 @@
     "eslint-config-next": "13.2.4",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-storybook": "^0.6.11",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "msw": "^1.2.1",
     "storybook": "^7.2.3",
     "typescript": "5.0.2",
