--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react-dom": "18.0.11",
     "@types/suncalc": "^1.9.0",
     "babel-loader": "^9.1.2",
+    "cypress": "^12.17.4",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
     "eslint-plugin-jest": "^27.2.1",
