--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
-    "next": "^13.4.16",
+    "next": "^13.5.6",
     "node-cache": "^5.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -68,9 +68,9 @@
     "@types/react-dom": "18.0.11",
     "@types/suncalc": "^1.9.0",
     "babel-loader": "^9.1.2",
-    "cypress": "^12.17.4",
+    "cypress": "^13.3.2",
     "eslint": "^8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "^13.5.6",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-storybook": "^0.6.11",
     "jest": "^29.6.2",
